--- a/ghc-justdoit.cabal
+++ b/ghc-justdoit.cabal
@@ -15,7 +15,7 @@ category:            Language
 build-type:          Simple
 extra-source-files:  ChangeLog.md, README.md
 cabal-version:       >=1.10
-tested-with:         GHC ==8.5
+tested-with:         GHC ==8.5.*
 
 library
   exposed-modules:     GHC.LJT
