--- a/ghc-justdoit.cabal
+++ b/ghc-justdoit.cabal
@@ -29,7 +29,7 @@ category:            Language
 build-type:          Simple
 extra-source-files:  ChangeLog.md, README.md
 cabal-version:       >=1.10
-tested-with:         GHC ==8.5.*
+tested-with:         GHC ==8.6.*, GHC ==8.7.*
 
 library
   exposed-modules:     GHC.LJT
